# StaffSync

./: .env
Backend/: pyproject.toml
Backend/Database_operations/: db_creator.py  staffsync.duckdb  testing_db.py
backend/: main.py  models.py  pyproject.toml  staffsync_db.db  staffsync_db.duckdb
backend/Database_operations/: db_creator.py  init_db.py  schema.sql  staffsync_db.duckdb  testing_db.py
backend/backend_services/: login_to_account.py  tenant_registration.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css  index.js
frontend/src/components/: navbar.js
frontend/src/pages/: Landing.js  Login.js  TenantRegister.js  attendance.js  dashboard.js  employees.js  payroll.js  reports.js
