[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pydantic[email]>=2.11.7",
    "uvicorn>=0.35.0",
]
